--- a/src/style.css
+++ b/src/style.css
@@ -60,25 +60,29 @@ main {
     width: 86%;
     padding: 1rem 2rem;
     margin-bottom: 1.5rem;
-    border:none;
-    border-radius: 0.5rem;
+    cursor: not-allowed;
     font-family: 'Roboto Mono', monospace;
     font-size: var(--sm);
-    color: var(--dark-gray);
+    font-weight: 700;
+    border:none;
+    border-radius: 0.5rem;
+    color: var(--white);
+    background-color: var(--gray);
 }
 /*Copy button*/
 .copy {
     width: 10%;
-    cursor: pointer;
     border: none;
     border-radius: 0.5rem;
     padding: 1rem 0.5rem;
     color: var(--white);
     background-color: var(--blue);
 }
+.copy:hover {
+    cursor: pointer;
+}
 /*Generate button*/
 .generate-button {
-    cursor: pointer;
     width: 100%;
     margin-top: 2rem;
     padding: 1rem 2rem;
@@ -91,5 +95,6 @@ main {
     background-color: var(--blue);
 }
 .generate-button:hover {
+    cursor: pointer;
     background-color: var(--dark-blue);
 }
